--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.15.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +20,8 @@
     "react-intersection-observer": "^9.8.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-toggle-dark-mode": "^1.1.1",
+    "react-use": "^17.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
